k/vc/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ts-vault
  namespace: vault
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: https8200
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vault
                port:
                  number: 8200
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ts-loft
  namespace: loft
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: https602
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: loft
                port:
                  number: 443
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ts-argocd
  namespace: argocd
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: https603
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ts-traefik
  namespace: traefik
spec:
  entryPoints:
    - https605
  routes:
    - kind: Rule
      match: PathPrefix(`/api`)
      services:
        - kind: TraefikService
          name: api@internal
    - kind: Rule
      match: PathPrefix(`/`)
      services:
        - kind: TraefikService
          name: dashboard@internal
  tls:
    secretName: default-certificate
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ts-kuma-global
  namespace: vc1
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: https606
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kuma-control-plane-x-default-x-vc1
                port:
                  number: 5681
